recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:22: error: not found: value snowSquare
		snowSquare(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^